predicting with the new model

--- a/notebook/model_code.ipynb
+++ b/notebook/model_code.ipynb
@@ -353,7 +353,7 @@
     }
    ],
    "source": [
-    "texts = [\"Free entry in 2 a wkly comp to win FA Cup final tkts 21st May 2005. Text FA to 87121 to receive entry question(std txt rate)T&C's apply 08452810075over18's\"]\n",
+    "texts = [\"Hi what's up\"]\n",
     "seq = tok.texts_to_sequences(texts)\n",
     "seq = sequence.pad_sequences(seq,maxlen=max_len)\n",
     "result = model.predict(seq)\n",
