running more tests on the notebook

--- a/notebook/model_code.ipynb
+++ b/notebook/model_code.ipynb
@@ -338,22 +338,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.99989617]], dtype=float32)"
+       "array([[0.98158586]], dtype=float32)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "texts = [\"Hi what's up\"]\n",
+    "texts = [\"Do you want to win $1000. Just sign up at www.winmoney.com. Also your fb has been hacked. Call 512-353-334 to have customer service fix it for you.\"]\n",
     "seq = tok.texts_to_sequences(texts)\n",
     "seq = sequence.pad_sequences(seq,maxlen=max_len)\n",
     "result = model.predict(seq)\n",
